--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ CONFIGURE_COMMON(${PROJ})
 
 ADD_EXECUTABLE(${PROJ} src/main.cpp ${COMMON_FILES} ${COMMON_DESKTOP_CONSOLE_FILES})
 
-TARGET_LINK_LIBRARIES(${PROJ} Qt5Core Qt5Sql factory)
+TARGET_LINK_LIBRARIES(${PROJ} Qt5::Core Qt5::Sql factory)
