--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,11 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
 SET(PROJ "gpredict3-console")
 
+MESSAGE(STATUS "Configuring console project")
+
 CONFIGURE_COMMON(${PROJ})
 
 ADD_EXECUTABLE(${PROJ} src/main.cpp ${COMMON_FILES} ${COMMON_DESKTOP_CONSOLE_FILES})
 
 TARGET_LINK_LIBRARIES(${PROJ} Qt5::Core Qt5::Sql factory)
+TARGET_COMPILE_DEFINITIONS(${PROJ} PUBLIC "-DNOGUI")
