updating to refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,11 @@ MESSAGE(STATUS "Configuring console project")
 
 CONFIGURE_COMMON(${PROJ})
 
-ADD_EXECUTABLE(${PROJ} src/main.cpp ${COMMON_FILES} ${COMMON_DESKTOP_CONSOLE_FILES})
+SET(CONSOLE_RTL_SRC )
+ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.h")
+ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.cpp")
+
+ADD_EXECUTABLE(${PROJ} src/main.cpp ${COMMON_FILES} ${COMMON_DESKTOP_CONSOLE_FILES} ${CONSOLE_RTL_SRC})
 
 TARGET_LINK_LIBRARIES(${PROJ} Qt5::Core Qt5::Sql factory)
 TARGET_COMPILE_DEFINITIONS(${PROJ} PUBLIC "-DNOGUI")
