--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,5 @@ ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.cpp")
 
 ADD_EXECUTABLE(${PROJ} src/main.cpp ${COMMON_FILES} ${COMMON_DESKTOP_CONSOLE_FILES} ${CONSOLE_RTL_SRC})
 
-TARGET_LINK_LIBRARIES(${PROJ} Qt5::Core Qt5::Sql factory)
+TARGET_LINK_LIBRARIES(${PROJ} Qt5::Core Qt5::Sql scgms)
 TARGET_COMPILE_DEFINITIONS(${PROJ} PUBLIC "-DNOGUI")
