adapting to refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,13 +4,15 @@ SET(PROJ "gpredict3-console")
 
 MESSAGE(STATUS "Configuring console project")
 
+FILE(GLOB SRC_BASE src/*.cpp)
+
 CONFIGURE_COMMON(${PROJ})
 
 SET(CONSOLE_RTL_SRC )
 ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.h")
 ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.cpp")
 
-ADD_EXECUTABLE(${PROJ} src/main.cpp ${COMMON_FILES} ${COMMON_DESKTOP_CONSOLE_FILES} ${CONSOLE_RTL_SRC})
+SCGMS_ADD_EXECUTABLE(${PROJ} ${SRC_BASE} ${COMMON_FILES} ${COMMON_DESKTOP_CONSOLE_FILES} ${CONSOLE_RTL_SRC})
 
 TARGET_LINK_LIBRARIES(${PROJ} Qt5::Core Qt5::Sql scgms)
 TARGET_COMPILE_DEFINITIONS(${PROJ} PUBLIC "-DNOGUI")
