--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,14 +9,14 @@ FILE(GLOB SRC_BASE src/*.cpp)
 CONFIGURE_COMMON(${PROJ})
 
 SET(CONSOLE_RTL_SRC )
-IF (NOT QT5_DISABLE)
+IF (NOT Qt5_DISABLE)
 	ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.h")
 	ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.cpp")
 ENDIF()
 
 SCGMS_ADD_EXECUTABLE(${PROJ} ${SRC_BASE} ${COMMON_FILES} ${COMMON_DESKTOP_CONSOLE_FILES} ${CONSOLE_RTL_SRC})
 
-IF (NOT QT5_DISABLE)
+IF (NOT Qt5_DISABLE)
 	TARGET_LINK_LIBRARIES(${PROJ} Qt5::Core Qt5::Sql scgms)
 ENDIF()
 
