Fixed build on *nix systems

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ SET(CONSOLE_RTL_SRC )
 IF (NOT Qt5_DISABLE)
 	ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.h")
 	ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.cpp")
+	ADD_UTILS_FILE(CONSOLE_RTL_SRC "QtUtils.cpp")
 ENDIF()
 
 SCGMS_ADD_EXECUTABLE(${PROJ} ${SRC_BASE} ${COMMON_FILES} ${COMMON_DESKTOP_CONSOLE_FILES} ${CONSOLE_RTL_SRC})
