Use pre-built static library instead of explicitly including the SDK

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,17 +42,11 @@ FILE(GLOB SRC_BASE src/*.cpp src/*.h)
 
 CONFIGURE_COMMON(${PROJ})
 
-SET(CONSOLE_RTL_SRC )
-IF (NOT Qt5_DISABLE)
-	ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.h")
-	ADD_RTL_FILE(CONSOLE_RTL_SRC "qdb_connector.cpp")
-	ADD_UTILS_FILE(CONSOLE_RTL_SRC "QtUtils.cpp")
-ENDIF()
-
-SCGMS_ADD_EXECUTABLE(${PROJ} ${SRC_BASE} ${COMMON_FILES} ${COMMON_DESKTOP_CONSOLE_FILES} ${CONSOLE_RTL_SRC})
+SCGMS_ADD_EXECUTABLE(${PROJ} ${SRC_BASE})
+TARGET_LINK_LIBRARIES(${PROJ} scgms-common)
 
 IF (NOT Qt5_DISABLE)
-	TARGET_LINK_LIBRARIES(${PROJ} Qt5::Core Qt5::Sql scgms)
+	TARGET_LINK_LIBRARIES(${PROJ} Qt5::Core Qt5::Sql Qt5::Widgets)
 ENDIF()
 
 TARGET_COMPILE_DEFINITIONS(${PROJ} PUBLIC "-DNOGUI")
