general: reorganized buildsystem to reflect changes in common repository

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,13 +34,25 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
-SET(PROJ "gpredict3-console")
+SET(PROJ "console")
+
+PROJECT(${PROJ})
 
 MESSAGE(STATUS "Configuring console project")
 
+SET(SMARTCGMS_COMMON_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../common/" CACHE PATH "SmartCGMS 'common' directory location")
+
+INCLUDE("${SMARTCGMS_COMMON_DIR}/cmake/Functions.cmake")
+
+DISCOVER_DEPENDENCIES()
+
+INCLUDE_DIRECTORIES("${SMARTCGMS_COMMON_DIR}/")
+
 FILE(GLOB SRC_BASE src/*.cpp src/*.h)
 
-CONFIGURE_COMMON(${PROJ})
+IF (NOT Qt5_DISABLE)
+	DISCOVER_QT_LIBRARY(Core Sql Widgets)
+ENDIF()
 
 SCGMS_ADD_EXECUTABLE(${PROJ} ${SRC_BASE})
 TARGET_LINK_LIBRARIES(${PROJ} scgms-common)
@@ -50,3 +62,5 @@ IF (NOT Qt5_DISABLE)
 ENDIF()
 
 TARGET_COMPILE_DEFINITIONS(${PROJ} PUBLIC "-DNOGUI")
+
+APPLY_SCGMS_LIBRARY_BUILD_SETTINGS(${PROJ})
