Configure console project output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,15 +52,16 @@ INCLUDE_DIRECTORIES("${SMARTCGMS_COMMON_DIR}/")
 
 FILE(GLOB SRC_BASE src/*.cpp src/*.h)
 
-IF (NOT Qt5_DISABLE)
+IF (NOT Qt_DISABLE)
 	DISCOVER_QT_LIBRARY(Core Sql Widgets)
 ENDIF()
 
 SCGMS_ADD_EXECUTABLE(${PROJ} ${SRC_BASE})
+CONFIGURE_TARGET_OUTPUT(${PROJ} "")
 TARGET_LINK_LIBRARIES(${PROJ} scgms-common)
 
-IF (NOT Qt5_DISABLE)
-	TARGET_LINK_LIBRARIES(${PROJ} Qt5::Core Qt5::Sql Qt5::Widgets)
+IF (NOT Qt_DISABLE)
+	TARGET_LINK_LIBRARIES(${PROJ} Qt::Core Qt::Sql Qt::Widgets)
 ENDIF()
 
 TARGET_COMPILE_DEFINITIONS(${PROJ} PUBLIC "-DNOGUI")
